# snitcher

./: .gitignore  Cargo.toml
src/: main.rs  scraper.rs  sql.rs  utils.rs
